--- a/css/styles.css
+++ b/css/styles.css
@@ -2,32 +2,36 @@
 header{
     background-color: #4070a8;
     height: 50px;
-    padding: 0;
+    padding: 5px 0 0 0;
     margin: 0;
     color: white;
-    font-size: 1.2em;
+    font-size: 1.1em;
 }
 header img{
+    float: left;
     margin: 0 20px 0 0;
     padding: 3px 3px;
     display: block;
     width: 60px;
     height: 40px;
 }
+header img:hover{
+    cursor: pointer;
+}
 header button{
-    background-color: rgba(0, 0, 0, 0);
+    background-color: transparent;
     border: 1px solid white;
     color: white;
     padding: 5px 20px;
     float: right;
-    margin: 10px 20px 0 0;
+    margin: 5px 20px 0 0;
 }
 header button:hover{
     cursor: pointer;
     background-color: white;
     color: #4070a8;
 }
-.dropdown {
+.dropdown{
     position: relative;
     display: inline-block;
     padding: 6px 10px;
@@ -48,21 +52,26 @@ header button:hover{
     z-index: 1;
     background-color: #4070a8;
 }
-.dropdown-content a{
+header a{
     text-decoration: none;
     color: white;
     padding: 5px 20px;
     display: block;
+}
+.dropdown-content a{
     font-size: 0.8em;
 }
-.dropdown-content a:hover{
+header a:hover{
     background-color: white;
     color: #4070a8;
+    cursor: pointer;
 }
 .dropdown:hover .dropdown-content {
     display: block;
 }
-
+#create-qroom{
+    display: none;
+}
 /* BODY BOSY BOSY BOSY BOSY BOSY BOSY BOSY */
 body{
     background-color: #f9f9f9;
@@ -70,11 +79,37 @@ body{
     padding: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+.divider{
+    border: solid 0.5px #4070a8;
+    display: block;
+    width: 70%;
+}
+.no-margin{
+    margin: 0;
+}
+strong{
+    font-family: Arial, Helvetica, sans-serif;
+}
+/* FORM FORM FORM FORM FORM FORM FORM FORM */
+form{
+    text-align: center;
+}
+form label{
+    display: block;
+}
+form input{
+    width: 50%;
+    min-width: 300px;
+    border: 1px solid #4070a8;
+    padding: 10px;
+    text-align: center;
+    margin: 10px auto;
+}
 
 /* LOGIN LOGIN LOGIN LOGIN LOGIN LOGIN LOGIN */
 #modal-login{
     width: 100%;
-    height: 100%;
+    height: 150%;
     background-color: rgba(0, 0, 0, 0.7);
     position: absolute;
     top: 0;
@@ -86,7 +121,7 @@ body{
     display: none; 
 }
 .login-content{
-    margin: 10% auto;
+    margin: 5% auto;
     width: 60%;
     height: auto;
     min-width: 500px;
@@ -99,12 +134,12 @@ body{
 .login-content form input{
     width: 80%;
     padding: 5px 10px;
-    font-size: 1em;
+    font-size: 0.9em;
     margin: 0 0 20px 0;
 }
 .login-content form button{
     width: 40%;
-    font-size: 1.5em;
+    font-size: 1.2em;
     padding: 10px;
     background-color: #4070a8;
     color: #ddd;
@@ -117,11 +152,22 @@ body{
     color: #4070a8;
 }
 .login-content form label{
-    font-size: 1.2em;
-    margin: 20px 0;
+    font-size: 1em;
+    margin: 10px 0;
     display: block;
 }
-
+.close-popup{
+    background-color: transparent;
+    border: none;
+    color: red;
+    font-size: 2em;
+    top: 0;
+    right: 0;
+    position: absolute;
+}
+.close-popup:hover{
+    cursor: pointer;
+}
 /* MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN */
 li{
     list-style-type: none;
@@ -161,12 +207,36 @@ ul{
     min-width: 300px;
     width:70%;
     margin: 5% auto 0;
-    text-align: center;
     text-align: left;
     padding: 0;
 }
 h2{
     font-size: 1.3em;
     text-align: center;
+    margin: 10px auto 5px;
     padding: 0;
+    width: 80%;
+}
+/* MANAGE MANAGE MANAGE MANAGE MANAGE MANAGE MANAGE */
+select{
+    padding: 10px;
+    margin: 5px auto;
+    font-size: 0.9em;
+    display: block;
+    text-align: center;
+    border: 1px solid #4070a8;
+}
+button{
+    background-color: #4070a8;
+    border: 1px solid #4070a8;
+    color: white;
+    padding: 10px 20px;
+    font-size: 1em;
+    margin: 20px auto;
+    display: block;
+}
+button:hover{
+    background-color: white;
+    color: #4070a8;
+    cursor: pointer;
 }
